outstanding bugs include filtered lists rendering one event later than they should, books for sale not showing correct pricing, and code occassionally breaking when a print type filter is applied

--- a/src/FilterMenus/FilterMenus.css
+++ b/src/FilterMenus/FilterMenus.css
@@ -16,3 +16,8 @@
 .dropdown {
     width: 150px;
 }
+
+.filters-form-container {
+    display: flex;
+    flex-direction: row;
+}   
